# AUC_Summit_CUFE

./: .gitignore  LICENSE  README.md  comms_explanation.ipynb  gantry_pid_controller.py  rosserial_tcp_server.py  test_marwan_trajectory.py
esp/: JOESWiFiSetup.h  MotorBridge.cpp  MotorBridge.h  WiFiHardware.h  esp.ino  ros_pid_controller.py
image_process/: camera.py  image_to_points.py
install/: local_setup.sh  setup.sh
install/processing_pkg/share/processing_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
main_xy/: JOESWiFiSetup.h  main_xy.ino  motor_xy.cpp  motor_xy.h
main_xy/main_xy_2.ino/: JOESWiFiSetup.h  main_xy_2.ino.ino
main_z/: JOESWiFiSetup.h  main_z.ino  motor_z.cpp  motor_z.h
ros/: CMakeLists.txt  package.xml
ros/launch/: atom_pnp_complete.launch  atom_pnp_test.launch
ros/scripts/: communication_tester.py  motor_commander.py  ros_pid_controller.py
src/processing_pkg/: setup.cfg  setup.py
src/processing_pkg/processing_pkg/: Processing.py  line_extraction.py  processing_node.py  skeleton_module.py  sketch_module.py  sorting.py  test_sketch.py
trajectory_pkg/: package.xml  package.xml.save  setup.cfg  setup.py
trajectory_pkg/trajectory_pkg/: processing.py  processing_node.py
trajectory_profiles/: H_traj.text  T_traj.text  circle_traj.text  cross_traj.text  image_traj.txt  parallel_traj.text  spiral_traj.text  triangle_traj.text
