<?xml version="1.0"?>
<package format="2">
  <name>atom_pnp</name>
  <version>0.0.1</version>
  <description>ATOM Pick and Place - ESP32 to ROS Communication Bridge</description>
  <maintainer email="yusuf@example.com">Yusuf</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
